test/errors/div_zero.correct
error: div_zero.li:1:11: cannot divide by zero
│ print(1 / 0);
│           ~
│           ^
error: div_zero.li:2:11: cannot divide by zero
│ print(1 % 0);
│           ~
│           ^
